ABOUT: improved changelog styles on spacing, resolved #28

--- a/src/app/modules/about/about.scss
+++ b/src/app/modules/about/about.scss
@@ -28,6 +28,8 @@
 		font-weight: bold;
 	}
 
+	li.pt-0-5{ padding-top: 0.15rem; }
+
 	h6 .badge.badge-pill {
 		width: 85px;
 		&.badge-warning { background-color: #EBA821; }
